# ambersim

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  install.sh  install_mj_source.sh  pyproject.toml  pyrightconfig.json  traj_opt.py
.github/workflows/: code_checks.yml  mujoco_nightly.yml  mujoco_nightly_and_code_checks.yml
ambersim/: __init__.py  base.py  utils.py
ambersim/_scripts/: _install_shim.py  install.sh  install_mj_source.sh
ambersim/control/: base.py  predictive_control.py
ambersim/envs/: a1.py  exo.py  exo_base.py  exo_parallel.py  exo_traj_opt.py  exo_tsc.py  traj_opt_utils.py
ambersim/learning/: architectures.py
ambersim/logger/: logger.py
ambersim/models/allegro_hand/: cube.xml  left_hand.xml  left_hand_position.xml  right_hand_motor.xml  right_hand_position.xml  scene_left.xml  scene_right.xml
ambersim/models/barrett_hand/: bh280.urdf  bh280.xml
ambersim/rl/: base.py  helpers.py  networks.py
ambersim/rl/pendulum/: swingup.py
ambersim/sim/: simulation.py
ambersim/trajopt/: base.py  cost.py  shooting.py
ambersim/utils/: _internal_utils.py  ahac.py  ahac_config_alg.yaml  ahac_config_main.yaml  ahac_train.py  ahac_train_1.py  ahac_training_utils.py  ahac_utils_loss.py  ahac_utils_model.py  ahac_utils_torch_utils.py  asset_utils.py  conversion_utils.py  exo_sim_utils.py  introspection_utils.py  io_utils.py  pin_utils.py  ppo_training_utils.py
benchmarks/trajopt/: bm_predictive_sampling.py
examples/: a1_ppo.ipynb  convex_decomposition.py  exo_ppo.ipynb  exo_walking.ipynb  interactive_simulation.py  load_from_file.py  load_from_urdf.py  test_env.py  tutorial.ipynb
examples/control/: algr_palmup.py  pd_predictive_sampling.py  predictive_sampling.py  vanilla_predictive_sampling.py
examples/exo/: exo_ahac.py  exo_nominal.py  exo_ppo.py  exo_ppo_load.py  exo_traj_opt.py  exo_traj_opt_cfg_default.yml
examples/io/: convex_decomposition.py  load_from_file.py
examples/rl/pendulum/: ex_logger.py  ex_pendulum_swingup.py  ex_save_and_load.py  ex_swingup.py  ex_tensorboard.py
examples/sim/: interactive_simulation.py
examples/trajopt/: ex_predictive_sampling.py
models/barrett_hand/: bh280.urdf  bh280.xml
models/cursed_a1/: a1.xml
models/exo/: Maegan_Tucker_loadedExo.xml  default_bez.yaml  jt_bez_2023-09-10.yaml  limits.yaml  loadedExo.xml  loadedExo_box.xml  loadedExo_no_terrain.xml  loadedExo_slope.xml  sim_config_loadingPos.yaml
models/exo/EMPTY_STL/: LeftFootLink.STL  LeftFrontalHipLink.STL  LeftLowerLegLink.STL  LeftSagittalAnkleLink.STL  LeftSagittalHipLink.STL  LeftSagittalKneeLink.STL  LeftTransverseHipLink.STL  PelvisLink.STL  RightFootLink.STL  RightFrontalHipLink.STL  RightHenkeAnkleLink.STL  RightLowerLegLink.STL  RightSagittalAnkleLink.STL  RightSagittalHipLink.STL  RightSagittalKneeLink.STL  RightTransverseHipLink.STL  ShinLower_L.stl  ShinLower_R.stl  ShinUpper_R.stl  ThighLower_L.stl  ThighLower_R.stl  ThighUpper_L.stl  ThighUpper_R.stl
models/exo/STL/: LeftFrontalHipLink.STL  LeftHenkeAnkleLink.STL  LeftSagittalAnkleLink.STL  LeftSagittalHipLink.STL  LeftSagittalKneeLink.STL  LeftToeLink.STL  LeftTransverseHipLink.STL  LeftUpperLegLink.STL  PelvisLink.STL  RightFrontalHipLink.STL  RightSagittalAnkleLink.STL  RightSagittalHipLink.STL  RightSagittalKneeLink.STL  RightToeLink.STL  RightTransverseHipLink.STL  RightUpperLegLink.STL  TorsoLink.STL
models/pendulum/: pendulum.urdf  pendulum.xml  scene.xml
tests/: dummy_test.py  test_kin_dyn.py  test_load_model.py  test_mlp.py  test_model_io.py  test_ppo_networks.py
tests/trajopt/: test_cost.py  test_predictive_sampler.py
typings/coacd/: __init__.pyi
typings/dm_control/_render/: __init__.pyi  base.pyi  constants.pyi  glfw_renderer.pyi
typings/dm_control/composer/: __init__.pyi  arena.pyi  constants.pyi  define.pyi  entity.pyi  environment.pyi  initializer.pyi  robot.pyi  task.pyi
typings/dm_control/manipulation/: __init__.pyi  bricks.pyi  lift.pyi  place.pyi  reach.pyi
typings/mujoco/: __init__.pyi  bindings_test.pyi  gl_context.pyi  msh2obj.pyi  msh2obj_test.pyi  render_test.pyi  renderer.pyi  renderer_test.pyi  rollout.pyi  rollout_test.pyi  viewer.pyi  viewer_test.pyi
typings/trimesh/: __init__.pyi  base.pyi  boolean.pyi  bounds.pyi  caching.pyi  collision.pyi  comparison.pyi  constants.pyi  convex.pyi  creation.pyi  curvature.pyi  decomposition.pyi  exceptions.pyi  geometry.pyi  graph.pyi  grouping.pyi  inertia.pyi  intersections.pyi  interval.pyi  nsphere.pyi  parent.pyi  permutate.pyi  points.pyi  poses.pyi  primitives.pyi  proximity.pyi  registration.pyi  remesh.pyi  rendering.pyi  repair.pyi  resolvers.pyi  sample.pyi  schemas.pyi  smoothing.pyi  transformations.pyi  triangles.pyi  typed.pyi  units.pyi  util.pyi  version.pyi
(+220 files in other folders)
