[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ambersim"
version = "0.0.1"
description = "In-house tools built on GPU-accelerated simulation"
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "jax>=0.4.1",
    "jaxlib>=0.4.1",
    "matplotlib>=3.5.2",
    "mujoco>=3.0.0",
    "mujoco-mjx>=3.0.0",
    "numpy>=1.23.1",
    "scipy>=1.10.0",
    "torch>=1.13.1",
]

[project.optional-dependencies]

# Development packages
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.2",
    "pyright>=1.1.332",
]

[options]
# to download torch compatible with Cuda 11.8 and newest jax releases
dependency_links = [
    "https://download.pytorch.org/whl/cu118",
    "https://storage.googleapis.com/jax-releases/jax_releases.html",
]

[tool.setuptools.packages.find]
include = ["ambersim"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-n=4 --typeguard-packages=ambersim --disable-warnings"
testpaths = [
    "tests",
]

[tool.pyright]
include = ["ambersim"]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }

reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
